# learning-graph

./: 2nd_code.md  README.md  changes.md  final_code.md  first_code.md  learning_graph.pro  schubiy_application.md  schubiy_application_FINAL.md  schubiy_user_scripts.md  schubiy_user_scripts_FINAL.md
OLD_APPLICATIONS/: schubiy_application.md
plan/: .gitignore  141058.diagram  147586.diagram  plan.prj  stereotypes
presentation/: frames.tex  main.tex  preambule.tex  run  title.tex
report/: main.tex  run  title.tex
src/: CMakeLists.txt  ComboboxIdDialog.cpp  ComboboxIdDialog.h  DependencyDirection.h  DependencyDirectionDialog.cpp  DependencyDirectionDialog.h  GenerationOptionsDialog.cpp  GenerationOptionsDialog.h  GlobalSignalHandler.cpp  GlobalSignalHandler.h  GraphCanvasWidget.cpp  GraphCanvasWidget.h  GraphEdge.cpp  GraphEdge.h  GraphEditMode.h  GraphEditTab.cpp  GraphEditTab.h  GraphEditWidget.cpp  GraphEditWidget.h  GraphInfoDialog.cpp  GraphInfoDialog.h  GraphListWidget.cpp  GraphListWidget.h  GraphNode.cpp  GraphNode.h  GraphNodeItem.cpp  GraphNodeItem.h  GraphNodeWidget.cpp  GraphNodeWidget.h  GraphScene.cpp  GraphScene.h  GraphTab.cpp  GraphTab.h  GraphView.cpp  GraphView.h  GraphicsCore.cpp  LearningGraphTab.cpp  LearningGraphTab.h  LearningListTab.cpp  LearningListTab.h  (+49 more)
src/datatypes/: Theme.h
src/db/: db.h  graph.cpp  graphNode.cpp  init.cpp  list.cpp  package.cpp  sqlDefines.h  theme.cpp  themeEdge.cpp
src/filesystem/: filesystem.h  graph.cpp  list.cpp  package.cpp  theme.cpp
src/graphics/: GraphicsCore.cpp  GraphicsCore.h  LearningGraphTab.cpp  LearningGraphTab.h  LearningGraphWindow.cpp  LearningGraphWindow.h  LearningListTab.cpp  LearningListTab.h  LearningListWindow.cpp  LearningListWindow.h  PackageComboBox.cpp  PackageComboBox.h  PackagesListWidget.cpp  PackagesListWidget.h  PackagesTab.cpp  PackagesTab.h  ThemeContextMenuWidget.cpp  ThemeContextMenuWidget.h  ThemeInfo.cpp  ThemeInfo.h  ThemeInfoWindow.cpp  ThemeInfoWindow.h  ThemesListWidget.cpp  ThemesListWidget.h  ThemesTab.cpp  ThemesTab.h  run.sh
src/logics/: Package.h  PackageRequest.h  Theme.h  ThemeRequest.h  WorkerCore.cpp  WorkerCore.h  dbLogics.cpp  dbLogics.h  getPackage.cpp  getTheme.cpp  initDb.cpp  package.cpp  sqlDefines.h  theme.cpp
src/tests/: testDefines.h  tests.cpp
